syntax = "proto3";

package syndicode_interface_v1;

import "interface/v1/shared.proto";

//Provides administrative operations
service AdminService {
  //Creates a new user account.
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

  // Retrieves a user by UUID.
  rpc GetUser(GetUserRequest) returns (syndicode_interface_v1.GetUserResponse);

  //Deletes an existing user by UUID.
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

//Request to create a user account with a specific role and corporation.
message CreateUserRequest {
  // UUID generated on the client to match the response with the initial request.
  string request_uuid = 1;

  //Username of the new user.
  string user_name = 2;

  //Password for the new user.
  string user_password = 3;

  // The email address used to contact the user.
  string user_email = 4;

  //Role to assign to the new user.
  syndicode_interface_v1.UserRole user_role = 5;

  //Name of the user's corporation.
  string corporation_name = 6;
}

//Response after a user account is created.
message CreateUserResponse {
  //UUID of the created user.
  string user_uuid = 1;

  //Username of the created user.
  string user_name = 2;

  //Role assigned to the user.
  syndicode_interface_v1.UserRole user_role = 3;
}

// Request message for retrieving a user by UUID.
message GetUserRequest {
  // UUID of the user to retrieve.
  string user_uuid = 1;
}

//Request to delete a user by UUID.
message DeleteUserRequest {
  // UUID generated on the client to match the response with the initial request.
  string request_uuid = 1;

  //UUID of the user to delete.
  string user_uuid = 2;
}

//Response after a user account is deleted.
message DeleteUserResponse {
  //UUID of the deleted user.
  string user_uuid = 1;
}
